Fix typing animation of headings on mobile view

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -161,4 +161,9 @@
         margin-left: 0;
         text-align: center;
     }
+
+    .about-heading {
+      margin-left: 0;
+      text-align: center;
+    }
 }
