--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -8,7 +8,7 @@
 .navStyle {
     top: 0;
     width: 100%;
-    padding: 2rem 2rem;
+    padding: 1.5rem 1.5rem;
     z-index: 1000;
     position: fixed;
     display: flex;
@@ -21,6 +21,7 @@
 .navStyle.opaque {
     background: #222;
     opacity: 0.85;
+    padding: 1.5rem 1.5rem;
 }
 
 .linkStyle {
