--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -6,12 +6,11 @@
 }
 
 .skills-heading {
-    color: #fff;
-    padding-bottom: 20px;
-    margin-left: 60px;
-    text-align: left;
-    transition: margin 0.3s;
-    padding-top: 20px;
+  color: #fff;
+  padding-bottom: 20px;
+  margin-left: 60px;
+  text-align: left;
+  transition: margin 0.3s;
 }
 
 .skills-marquee {
@@ -58,13 +57,6 @@
 }
 
 @media (max-width: 768px) {
-  .skills-heading {
-    font-size: 1.5rem;
-    margin-left: 0;
-    padding-bottom: 10px;
-    text-align: left;
-  }
-  
   .skills-marquee {
     width: 100%;
     padding: 40px 0;
@@ -73,5 +65,10 @@
   .skill-item svg {
     width: 80px;
     height: 80px;
+  }
+
+  .skills-heading {
+    margin-left: 0;
+    text-align: center;
   }
 }
